[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/buildings/village/houses/exterior/mouse_entrance.png" type="Texture" id=1]
[ext_resource path="res://structures/buildings/village/MouseHome.gd" type="Script" id=2]
[ext_resource path="res://assets/buildings/village/houses/exterior/mouse_head_in_entrance.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=2]
height = 2.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 2.0

[node name="MouseHome" type="StaticBody2D" groups=["mouse_home"]]
collision_layer = 1024
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MouseDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetection"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="MouseBounceTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="UnloadPoint" type="Position2D" parent="."]
position = Vector2( -5, 6 )

[node name="MouseHeadTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="MouseHeadInEntrance" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.803922 )
position = Vector2( -3, -2 )
texture = ExtResource( 3 )
centered = false

[connection signal="body_entered" from="MouseDetection" to="." method="_on_MouseDetection_body_entered"]
[connection signal="timeout" from="MouseBounceTimer" to="." method="_on_MouseBounceTimer_timeout"]
[connection signal="timeout" from="MouseHeadTimer" to="." method="_on_MouseHeadTimer_timeout"]
